# scm-config-clone

./: .gitignore  CONTRIBUTING.md  README.md  _config.yml  mkdocs.yml  pull_request_template.md  pyproject.toml
.github/workflows/: ci.yml  mkdocs-build-deploy.yml
docker/: Dockerfile
docs/: index.md
docs/about/: contributing.md  license.md  release-notes.md
docs/user-guide/: introduction.md
docs/user-guide/docker/: getting-started.md  installation.md  troubleshooting.md
docs/user-guide/python/: commands.md  examples.md  getting-started.md
scm_config_clone/: main.py
scm_config_clone/commands/: __init__.py  address_groups.py  address_objects.py  auth.py
scm_config_clone/config/: settings.py
scm_config_clone/utilities/: helpers.py
