[tool.poetry]
name = "scm-config-clone"
version = "0.1.0"
description = "The purpose of this project is to take in Strata Cloud Manager configuration from one tenant and push it to another."
authors = ["Calvin Remsburg <calvin@cdot.io>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
panapi = "^0.0.1"
dynaconf = "^3.2.6"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
scm-clone = 'scm_config_clone.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"