[tool.poetry]
name = "scm-config-clone"
version = "0.1.0"
description = "A command-line tool to clone configuration objects between Palo Alto Networks Strata Cloud Manager (SCM) tenants."
authors = ["Calvin Remsburg <calvin@cdot.io>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
panapi = "^0.0.1"
dynaconf = "^3.2.6"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
scm-clone = 'scm_config_clone.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"